# OpenKE

./: pyproject.toml  train_transe_FB15K237.py
.codesandbox/: Dockerfile
